--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,7 +25,7 @@ h1 {
 }
 
 .hidden {
-  display: none !important;
+  display: none;
 }
 
 /* HERO */
@@ -327,7 +327,10 @@ td.block {
   @apply px-0;
 }
 .product {
-  @apply pt-32 pb-36 px-0 overflow-hidden;
+  @apply pt-32 px-0 overflow-hidden;
+}
+.productPicCell {
+  @apply pb-6;
 }
 .product-image {
   @apply flex flex-col items-center justify-center w-full lg:w-1/2;
@@ -338,6 +341,9 @@ td.block {
 }
 .product-description {
   @apply flex flex-col justify-center w-full;
+}
+.slick-initialized .slick-slide {
+  @apply h-auto;
 }
 .slick-prev, .slick-next {
   @apply block rounded-full bg-transparent px-6 text-[#292E43] py-2 transition-all hover:bg-[#292E43] hover:border-[#292E43] hover:text-white focus:outline-none;
@@ -353,7 +359,9 @@ td.block {
 .slick-next {
   background: url('/img/RightArrow.png') no-repeat center center;
 }
-
+.slick-slide img {
+  @apply mx-auto;
+}
 #subpageNav {
   @apply bg-[#2828B2];
 }
@@ -363,9 +371,7 @@ td.block {
 .img-logo {
   max-width: 140px;
 }
-.slick-track {
-  max-width: 100%;
-}
+
 .item-slick.slick-slide.slick-current.slick-active {
 	outline: none!important  
 }
@@ -373,9 +379,11 @@ td.block {
 #slider {
   margin-bottom: 15px;
 }
-
+#thumbnail_slider {
+  @apply mt-12;
+}
 #thumbnail_slider .item-slick {
-  max-width: 120px;
+  /* max-width: 120px; */
   outline: #B2B5BE;
   cursor: pointer;
   border-radius: 6px;
@@ -394,9 +402,6 @@ td.block {
 
 .slick-next {
   right: 0; 
-}
-.thumbnail-item.slick-slide {
-  height: auto !important;
 }
 .product-hero {
   @apply bg-[#FAFAFA] border-[#D3D3D3] border-t-0 border-l-0 border-r-0 py-12 pt-44;
@@ -467,7 +472,7 @@ span.product-spec {
   @apply text-[#030D2B] text-xl font-bold mb-2;
 }
 .category-list {
-  @apply block container mx-auto px-8 lg:p-0;
+  @apply block container mx-auto px-12;
 }
 .category-list tr[valign="top"][height="85"] {
   @apply grid grid-cols-1 lg:grid-cols-4 gap-y-8 gap-x-4 h-auto;
@@ -475,7 +480,9 @@ span.product-spec {
 }
 /* Product Cell */
 .product-cell {
-  @apply flex flex-col items-center justify-between bg-white rounded-lg p-4 mb-4 text-center;
+  @apply flex flex-col items-center justify-between bg-white rounded-lg p-8 mb-4 text-center;
+  border: 0.5px solid #D3D3D3;
+  border-radius: 16px;
 }
 .product-cell h4 {
   @apply text-[#030D2B] text-xl font-bold leading-tight mb-3;
@@ -545,7 +552,7 @@ span.product-spec {
   @apply lg:grid-cols-1;
 }
 .productInfo.full .productDescription {
-  @apply pb-24 md:pb-0 max-w-xl mx-auto;
+  @apply pb-24 md:pb-0 w-full max-w-xl mx-auto;
 }
 .productInfo h3 {
   @apply text-xl mb-6;
