--- a/src/css/index.css
+++ b/src/css/index.css
@@ -59,6 +59,9 @@ body h1 {
 .nav-item, .nav-item-dropdown {
   @apply relative uppercase py-4 px-4 tracking-wide text-lg hover:text-[#ddd];
 }
+.nav-item, .nav-item-dropdown {
+  @apply pr-10;
+}
 .nav-logo {
   @apply relative;
 }
@@ -848,4 +851,61 @@ table#__enclosingtable {
 }
 #handle_itemMainPortlet .container:first-of-type{
   @apply my-12;
+}
+.mainContent {
+  @apply prose max-w-prose mx-auto;
+}
+.mainContent ol > li, .mainContent ul > li {
+  font-size: 0.9rem;
+}
+.dropupmenu.open {
+  @apply block top-auto;
+  bottom: calc(100% + 10px);
+}
+.dropup {
+  @apply relative;
+}
+.dropupmenu {
+  @apply hidden origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg
+}
+.dropdown-button, .dropup-button {
+  @apply pr-8 cursor-pointer;
+}
+.dropup-button {
+  @apply pr-8;
+}
+/* add dropdown arrow to all dropdown elements and dropdown-toggle in tailwind  */
+/* .dropupmenu::after {
+  content: "";
+  position: absolute;
+  top: -6px;
+  right: 16px;
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #fff;
+} */
+/* FLip the arrow upside down  */
+
+.dropdown-toggle::after {
+  content: "";
+  position: absolute;
+  right: 16px;
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #fff;
+  top: calc(50% - 2px);
+}
+/* rotate the dropdown-toggle's arrow so they are right side up  */
+.dropdown-toggle::after {
+  transform: rotate(180deg);
+  top: calc(50% - 2px);
+}
+/* rotate the other way for .dropup-button's  */
+.dropup-button::after {
+  transform: rotate(0deg);
+  top: calc(50% - 2px);
 }
